--- a/public/css/index.css
+++ b/public/css/index.css
@@ -9,8 +9,16 @@ body, html{
 }
 
 #whiteboard{
-    cursor: crosshair;
     position: fixed;
+}
+
+#brush-cursor {
+    position: absolute;
+    opacity: 0.8;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    background-color: #000000;
 }
 
 footer{
