--- a/frontend/src/assets/styles/index.css
+++ b/frontend/src/assets/styles/index.css
@@ -1,3 +1,6 @@
+/*
+* CSS Reset
+*/
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -42,6 +45,19 @@ table {
     border-spacing: 0;
 }
 
+/*
+* CSS Variables
+ */
+:root {
+    --color-primary-dark: #292C4B;
+    --color-primary-light: #5D76AB;
+    --color-secondary-dark: #B9699E;
+    --color-secondary-light: #B47FB2
+}
+
+/*
+* Tailwind imports
+ */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
